--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Inexistent 3r Chimera
+title: Inexistent 3rd Chimera
 email: mattia.arrighetti@me.com
 description: >- # this means to ignore newlines until "baseurl:"
   An inarguably well-designed website.
