--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Inexistent 3rd Chimera
 email: mattia.arrighetti@me.com
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed website.
+  A blog about Fantasy Worlds, Old School RPGs, and their Reimagination.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://inexistentthirdchimera.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
