--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: About
   url: /about.html
 
-- title: Source
-  url: https://github.com/patdryburgh/hitchens
+- title: Owner
+  url: https://github.com/InexistentThirdChimera
 
-- title: Designer
-  url: http://patdryburgh.com
+- title: Instagram
+  url: https://www.instagram.com/a.m.arrighetti/
