--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,7 +1,7 @@
 - title: About
   url: /about.html
 
-- title: Owner
+- title: GitHub
   url: https://github.com/InexistentThirdChimera
 
 - title: Instagram
